[package]
name = "triedb"
version = "0.5.0"
edition = "2018"
license = "Apache-2.0"
description = "Lightweight Ethereum world state storage."
repository = "https://github.com/hrls/triedb"

[lib]
name = "triedb"

[features]
default = []
rocksdb = ["rocksdb_lib"]

[dependencies]
sha3 = "0.9.1"
rlp = "0.5.0"
primitive-types = { version = "0.8.0", features = ["rlp"] }
thiserror = "1.0.23"
rocksdb_lib = { package = "rocksdb", version = "0.16.0", default-features = false, optional = true }
derive_more = "0.99.16"

[dev-dependencies]
bincode = "1.3.1"
etcommon-hexutil = "0.2.4"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde = { version = "1.0.123", features = ["derive"] }
tempfile = "3.2.0"
