[package]
name = "triedb"
version = "0.5.0"
edition = "2018"
license = "Apache-2.0"
description = "Lightweight Ethereum world state storage."
repository = "https://github.com/hrls/triedb"

[lib]
name = "triedb"


[dependencies]
sha3 = "0.9.1"
rlp = "0.5.0"
primitive-types = { version = "0.12.0", features = ["rlp", "serde"] }
thiserror = "1.0.23"
rocksdb_lib = { package = "rocksdb", git = "https://github.com/velas/rust-rocksdb", version = "0.19.0", default-features = false, optional = true }
# rocksdb_lib = { package = "rocksdb", version = "0.16.0", default-features = false, optional = true }
dashmap = "4.0"
log="0.4"
derivative="2.2"
anyhow = "1.0"
fastrlp = { path="../fastrlp", version = "0.2.2", features = ["derive", "ethereum-types"] }
bytes = "1"
hex = "0.4.3"
[dev-dependencies]
bincode = "1.3.1"
etcommon-hexutil = "0.2.4"
criterion = { version = "0.4.0", features = ["html_reports"]}
rand = "0.8.4"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde = { version = "1.0.123", features = ["derive"] }
tempfile = "3.2.0"
hex-literal="0.3"
env_logger = "0.9"


[[bench]]
name = "compare_backends"
harness = false

[features]
default = ["rocksdb"]
rocksdb = ["rocksdb_lib"]
