[package]
name = "triedb-rocksdb"
version = "0.5.0"
edition = "2018"
license = "Apache-2.0"
description = "RocksDB adaptor for TrieDB."
repository = "https://github.com/hrls/triedb/rocksdb"

[lib]
name = "triedb_rocksdb"

[dependencies]
primitive-types = "0.9.0"

rocksdb = { version = "0.15.0", default-features = false }

triedb = { path = ".." }
